# warehouse_management

./: .flake8  .gitignore  .mypy.ini  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: makefile.yml
src/warehouse_management/: main.py
src/warehouse_management/domain/: models.py  repositories.py  services.py  unit_of_work.py
src/warehouse_management/infrastructure/: database.py  orm.py  repositories.py  unit_of_work.py
tests/: conftest.py  test_services.py
