[tool.poetry]
name = "warehouse-management"
version = "0.1.0"
description = ""
authors = ["Alexander Gnusarev <alexander.gnussarev@gmail.com>"]
readme = "README.md"
packages = [{include = "warehouse_management", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
tarantool = "^1.2.0"
sqlalchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.0"
black = "^24.4.2"
pylint = "^3.2.4"
mypy = "^1.10.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
